# FMCPE

./: .gitignore  README.md  analysis.py  main.py  make_plots.py  pyproject.toml  requirements.txt
baselines/: __init__.py  posteriors.py  trainers.py
configs/: config.yaml  mlxp.yaml
configs/task/: high_dim_gaussian.yaml  light_tunnel.yaml  pendulum.yaml  wind_tunnel.yaml
configs/task/model_config/: f1.yaml  f3.yaml  rope_f1.yaml
flow_matching/: torch_flow.py
scripts/: anim.py  baselines_perf.py  bimodal_gaussian_demo.py  fm_test_adaptive_gaussian.py  fm_test_gaussian.py  fm_test_pendulum.py  make_mcmc.py  mcmc.py  mcmc2.py  npe_debug.py  pendulum_mcmc.py  umnn_flow.py
simulator/: __init__.py  base.py  light_tunnel.py  pendulum.py  pure_gaussian.py  wind_tunnel.py
utils/: log.py  metrics.py  misc.py  networks.py  plots.py  torchutils.py  transform.py
