[project]
authors = [{name = "pruhlman", email = "pierre-louis.ruhlmann@inria.fr"}]

[tool.basedpyright]
venvPath = "/home/pruhlman/miniconda3/envs/"
venv = "fmcpe"
typeCheckingMode = "basic"
reportAssignmentType = "none"
# ignore=['*']


[tool.ruff]
# Allow lines to be as long as 120.
line-length = 100

# [tool.mypy]
# python_version = "3.12"
# python_executable = "/home/pruhlman/Doctorat/project/ropefm/.pixi/envs/sampling/bin/python"
